fix border radius bug in modal on iphone

--- a/src/components/Main/ArticleModal.module.scss
+++ b/src/components/Main/ArticleModal.module.scss
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   max-height: 70vh;
+  border-radius: $border-radius;
   overflow: auto;
 
   @media (max-width: $break-phone) {
@@ -59,7 +60,7 @@
       width: 100%;
       max-width: 100%;
       height: auto;
-      border-radius: $border-radius-small $border-radius-small 0 0;
+      border-radius: none;
     }
   }
 }
