--- a/src/components/UI/Modal.module.scss
+++ b/src/components/UI/Modal.module.scss
@@ -21,7 +21,6 @@
 
 .modal {
   background-color: $color-white;
-  overflow: hidden;
   border-radius: $border-radius;
   font-size: $font-medium;
   display: flex;
